--- a/server/app/views/sections/footer.scala.html
+++ b/server/app/views/sections/footer.scala.html
@@ -21,12 +21,15 @@
       <div class="row">
 
         <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>Arsha</h3>
+          <h3>Inform Algo</h3>
           <p>
-            A108 Adam Street <br>
-            New York, NY 535022<br>
-            United States <br><br>
-            <strong>Phone:</strong> +1 5589 55488 55<br>
+            Yog'du street 1/2 A, Hamkor Biznes 415,  <br>
+            Xorezm Region, Urgench 220100<br>
+            Uzbekistan <br><br>
+            <strong>Phone:</strong>
+              <label>
+                <a href="tel:+998 99 967 3398">+998 99 967 3398</a>
+              </label><br>
             <strong>Email:</strong> info@@example.com<br>
           </p>
         </div>
@@ -47,9 +50,9 @@
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Chat Bot</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Optimization System</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Machine Learning</a></li>
           </ul>
         </div>
 
@@ -71,14 +74,10 @@
 
   <div class="container footer-bottom clearfix">
     <div class="copyright">
-          &copy; Copyright <strong><span>Arsha</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Inform Algo</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="">Prince</a>
     </div>
   </div>
 </footer>
