--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -16,7 +16,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-            <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+            <img src="@routes.Assets.versioned("img/hero-img.png")" class="img-fluid animated" alt="">
           </div>
         </div>
       </div>
@@ -33,27 +33,27 @@
           <div class="row" data-aos="zoom-in">
 
             <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+              <img src="@routes.Assets.versioned("img/clients/client-1.png")" class="img-fluid" alt="">
             </div>
 
             <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+              <img src="@routes.Assets.versioned("img/clients/client-2.png")" class="img-fluid" alt="">
             </div>
 
             <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+              <img src="@routes.Assets.versioned("img/clients/client-3.png")" class="img-fluid" alt="">
             </div>
 
             <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+              <img src="@routes.Assets.versioned("img/clients/client-4.png")" class="img-fluid" alt="">
             </div>
 
             <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+              <img src="@routes.Assets.versioned("img/clients/client-5.png")" class="img-fluid" alt="">
             </div>
 
             <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+              <img src="@routes.Assets.versioned("img/clients/client-6.png")" class="img-fluid" alt="">
             </div>
 
           </div>
@@ -146,7 +146,7 @@
 
             </div>
 
-            <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+            <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("@routes.Assets.versioned("img/why-us.png")");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
           </div>
 
         </div>
@@ -158,7 +158,7 @@
 
           <div class="row">
             <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
-              <img src="assets/img/skills.png" class="img-fluid" alt="">
+              <img src="@routes.Assets.versioned("img/skills.png")" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
               <h3>Voluptatem dignissimos provident quasi corporis voluptates</h3>
@@ -306,7 +306,7 @@
 
             <div class="col-lg-6">
               <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-                <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="@routes.Assets.versioned("img/team/team-1.jpg")" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Walter White</h4>
                   <span>Chief Executive Officer</span>
@@ -323,7 +323,7 @@
 
             <div class="col-lg-6 mt-4 mt-lg-0">
               <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-                <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="@routes.Assets.versioned("img/team/team-2.jpg")" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Sarah Jhonson</h4>
                   <span>Product Manager</span>
@@ -340,7 +340,7 @@
 
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-                <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="@routes.Assets.versioned("img/team/team-3.jpg")" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>William Anderson</h4>
                   <span>CTO</span>
@@ -357,7 +357,7 @@
 
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-                <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="@routes.Assets.versioned("img/team/team-4.jpg")" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Amanda Jepson</h4>
                   <span>Accountant</span>
