--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -524,7 +524,8 @@
                 <div class="address">
                   <i class="icofont-google-map"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Yog'du street 1/2 A, Hamkor Biznes 415,  <br>
+                    Xorezm Region, Urgench 220100</p>
                 </div>
 
                 <div class="email">
@@ -539,15 +540,12 @@
                   <p>+1 5589 55488 55s</p>
                 </div>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border: 0;
-                  width: 100%;
-                  height: 290px;" allowfullscreen></iframe>
-              </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2985.567031780281!2d60.617898715696015!3d41.55697099342735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41dfc92ecee941b5%3A0xcc406d952cff2a84!2sHamkorbank!5e0!3m2!1sru!2sbg!4v1621923580425!5m2!1sru!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>              </div>
 
             </div>
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="php-email-form" >
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <label for="name">Your Name</label>
@@ -555,19 +553,19 @@
                     <div class="validate"></div>
                   </div>
                   <div class="form-group col-md-6">
-                    <label for="name">Your Email</label>
+                    <label for="email">Your Email</label>
                     <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
                     <div class="validate"></div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="name">Subject</label>
+                  <label for="subject">Subject</label>
                   <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                   <div class="validate"></div>
                 </div>
                 <div class="form-group">
-                  <label for="name">Message</label>
-                  <textarea class="form-control" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
+                  <label for="message">Message</label>
+                  <textarea class="form-control" id="message" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
                   <div class="validate"></div>
                 </div>
                 <div class="mb-3">
@@ -575,8 +573,8 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
-              </form>
+                <div class="text-center"><button id="postButton" type="submit">Send Message</button></div>
+              </div>
             </div>
 
           </div>
